<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_nazwa_zadania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_zadania"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_nazwa_zadania"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_poczatek_zadania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setDate"
            android:text="@string/poczatek_zadania" />

        <TextView
            android:id="@+id/textView_poczatek_zadania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selected"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_koniec_zadania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setDate2"
            android:text="@string/koniec_zadania" />

        <TextView
            android:id="@+id/textView_koniec_zadania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selected"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_lista_pracownikow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przypisz_pracownikow"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView_lista_pracownikow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_zapisz_zadanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zapisz" />

        <Button
            android:id="@+id/btn_usun_zadanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usun_zadanie" />

    </LinearLayout>

</LinearLayout>
